--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mongoose": "^6.4.4",
     "validator": "^13.7.0"
