--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport": "^0.6.0"
   }
 }
